[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/weapons/rocket_good.png" type="Texture" id=1]
[ext_resource path="res://Effects/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Sounds/sfx/INT_radaronline.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.2557

[sub_resource type="Animation" id=2]
resource_name = "Fade"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="AOF" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.45233 )
scale = Vector2( 0.767, 0.943 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fade"
anims/Fade = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
max_distance = 1300.0

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
max_distance = 2500.0

[connection signal="body_entered" from="." to="." method="hit_somthin"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Shoot" to="." method="_on_Shoot_finished"]
[connection signal="finished" from="Damage" to="." method="_on_Damage_finished"]
